<resources>
    <string name="app_name">Final Project</string>
    <string name="enter_Username">Enter The Username</string>
    <string name="enter_Mob_No">Enter The Mobile Number</string>
    <string name="Empty_Email_address">Empty Email address</string>
    <string name="enter_password">Please Enter The Password</string>
    <string name="enter_ConfirmPassword">Please Enter The ConfirmPassword</string>
    <string name="Password_is_not_match">Password Is Not Match</string>
    <string name="enter_email">Please Enter Email Address</string>
    <string name="validemailaddress">Valid Email Address</string>
    <string name="Invalidemailaddress">Invalid Email Address</string>
    <string name="Ragistration">Registration...</string>
    <string name="Login1">Login...</string>
    <string name="select_gender">Please Select Gender</string>
    <string name="select_country">Please Select Country</string>
    <string name="ListView">ListView</string>
    <string name="GridView">GridView</string>
    <string name="RecyclerView">RecyclerView</string>
    <string name="camera">camera</string>
    <string name="UserData">UserData</string>
    <string name="Username">Username *</string>
    <string name="MobileNumber">Mobile Number *</string>
    <string name="EmailID">Email ID *</string>
    <string name="Password">Password *</string>
    <string name="ForgetPassword">Forget Password</string>
    <string name="ConfirmPassword">Confirm Password *</string>
    <string name="Registration">Registration</string>
    <string name="Registered">Already Registered? Login here</string>
    <string name="Login">Login</string>
    <string name="Submit">Submit</string>
    <string name="Submit1">Submit...</string>
    <string name="NewPassword">New Password *</string>
    <string name="NewConfirmPassword">New Confirm Password *</string>
    <string name="Dashboard">Dashboard</string>
    <string name="image">capture image</string>
    <string name="ImageSlider">Image Slider</string>
    <string name="name">GUIDemo3</string>
    <string name="example_autocompletetextview">Example showing AutoCompleteTextView</string>
    <string name="AutoComplete">AutoComplete</string>
    <string name="LoadPicture">Load Picture</string>
    <string name="Complete">Click here to capture image using camera</string>
    <string name="Name">Name</string>
    <string name="enail">email@email.com</string>
    <string name="Mobile">e9999999999</string>
    <string name="Date_is_not_match">Date Is Not Match</string>
    <string name="Time">Time</string>
    <string name="time">Pick Time</string>
    <string name="Start">Start Date</string>
    <string name="End">End Date</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="googlemaps">google Maps</string>
    <string name="Location">Location</string>
    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string name="Address">Address</string>
    <string name="GetLocation">Get Location</string>
    <string name="CAMERApermissionallowsustoAccessCAMERAapp">CAMERA permission allows us to Access CAMERA app.</string>
    <string name="PermissionGrantedNowyourapplicationcanaccessCAMERA">Permission Granted, Now your application can access CAMERA.</string>
    <string name="PermissionCanceledNowyourapplicationcannotaccessCAMERA">Permission Canceled, Now your application cannot access CAMERA.</string>
    <string name="data">data</string>
    <string name="lbl_payment_details">Your Address:</string>
    <string name="lbl_loca">Locality: </string>
    <string name="lbl_city">City: </string>
    <string name="lbl_state">State: </string>
    <string name="country">Country: </string>
    <string name="pincode">PinCode: </string>
    <string name="dictrict">District: </string>
    <string name="toggle_flash">Toggle Flash</string>
    <string name="action_settings">Settings</string>
    <string name="scanned_data">Scanned Data</string>
    <string name="recorder">Recorder</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="play_recording">Play Recording</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="status">Status</string>
    <string name="providerNA">providerNA</string>
    <string name="Permission">Permission is denied!</string>
    <string name="FetchAddressIntentServices">FetchAddressIntentServices</string>
    <string name="Error">Error in getting address for the location</string>
    <string name="Noaddress">No address found for the location</string>
    <string name="STATE">.STATE</string>
    <string name="POST_CODE">.POST_CODE</string>
    <string name="DISTRICT">.DISTRICT</string>
    <string name="COUNTRY">.COUNTRY</string>
    <string name="LOCAITY">.LOCAITY</string>
    <string name="ADDRESS">.ADDRESS</string>
    <string name="LOCATION_DATA_EXTRA">.LOCATION_DATA_EXTRA</string>
    <string name="RECEVIER">.RECEVIER</string>
    <string name="RESULT_DATA_KEY">.RESULT_DATA_KEY</string>
    <string name="AndioRecorder">Andio Recorder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="startrecording">Press mic button\nTo start recording</string>
    <string name="Recording">Recording Stopped, File Saved: \n</string>
    <string name="file">Recording File Name: \n</string>
    <string name="NameFileAudio">Recording</string>
    <string name="mp3">.mp3</string>
    <string name="AudioSelected">Audio Selected</string>
    <string name="MediaPlayer">Media Player</string>
    <string name="NotPlaying">Not Playing</string>
    <string name="Filename">File name</string>
    <string name="Unable">Unable to process,try again</string>
    <string name="autofill">Auto Fill</string>
    <string name="Click">Click To Select An Audio</string>
    <string name="files">Audio Files</string>
    <string name="Select">Select an Audio</string>
    <string name="Progressbar">Progressbar</string>
    <string name="StartProgressbar">Start</string>
    <string name="StopProgressbar">Stop</string>
</resources>