<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="352dp"
        android:layout_height="413dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/business" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false">

            <EditText
                android:id="@+id/edtMob_No"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/MobileNumber"
                android:inputType="number"
                android:maxLength="10" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/imgShow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/eye" />
        </RelativeLayout>

        <TextView
            android:id="@+id/ForgotPassword"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="220dp"
            android:layout_marginTop="1dp"
            android:text="@string/ForgetPassword"
            android:textColor="@color/purple_700" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/black"
            android:textColorHint="@color/white"
            android:layout_marginTop="40dp"
            android:hint="@string/Login" />

        <TextView
            android:id="@+id/txtRegistration"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/Registration"
            android:textColor="#3F51B5"
            android:textSize="17dp" />
    </LinearLayout>
</LinearLayout>