<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C9EDF3"
    tools:context=".AutoComplete" >

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/black">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/leftarrow"
            tools:ignore="UseAppTint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:text="@string/AutoComplete"
            android:textColor="@color/bg_color" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/example_autocompletetextview"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_alignLeft="@+id/textView2"
            android:layout_marginTop="54dp"
            android:ems="10"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="399dp"
            android:layout_height="246dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/idBtnPickDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="20dp"
                    android:background="@color/teal_200"
                    android:text="@string/Start"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/idBtnPickDate1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="20dp"
                    android:background="@color/teal_200"
                    android:text="@string/End"
                    android:textAllCaps="false" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/idBtnPickDate11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:background="@color/teal_200"
            android:text="@string/Submit"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/idTVSelectedTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/idBtnPickTime"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/Time"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/idBtnPickTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:background="@color/teal_200"
            android:text="@string/time"
            android:textAllCaps="false" />
    </LinearLayout>
</RelativeLayout>